# College

./: .gitignore
abb/: CMakeLists.txt
abb/include/: abb.h
abb/src/: main.cpp
abb/src/utils/: abb.cpp
basic-double-linked-list/: CMakeLists.txt  README.md  main.cpp
basic-double-linked-list/include/: node.h
basic-double-linked-list/include/classes/: binary.h  binary_linked.h  decimal.h  decimal_linked.h  double_linked_list.h  hexadecimal.h  octal.h
basic-double-linked-list/include/utils/: count_digits.cpp
basic-double-linked-list/src/: binary.cpp  binary_linked.cpp  decimal.cpp  decimal_linked.cpp  double_linked_list.cpp  hexadecimal.cpp  octal.cpp
basic-double-linked-list/src/utils/: count_digits.cpp
cmake/: .gitignore  CMakeLists.txt
cmake/lib/thirdPartyLib/: CMakeLists.txt
double-linked-list/: CMakeLists.txt
double-linked-list/include/: double_linked_list.h  node.h
double-linked-list/src/: main.cpp
linked-list/: CMakeLists.txt
linked-list/src/: main.cpp
min-space-space-complexity/: CMakeLists.txt  main.cpp
recursive-algorithm/: CMakeLists.txt
recursive-algorithm/include/: execution_time.h
recursive-algorithm/src/: main.cpp
recursive-algorithm/src/utils/: execution_time.cpp
